--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <h2>Unser Verein</h2>
   </div>
   <div class="content">
-    <p>Wir möchten den Rollsport in Butzbach voranbringen. Egal ob Skateboarding, BMX, Inline-Skates oder Rollschuh, bei uns sind Alle willkommen! Unser Ziel ist ein eigener Treffpunkt und Skatepark in Butzbach. Hast du Bock drauf? Über das Formular kannst du deine Vereinsmitgliedschaft beantragen!</p>
+    <p>
+      Wir möchten den Rollsport in Butzbach voranbringen. 
+      Egal ob Skateboarding, BMX, Inline-Skates oder Rollschuh, bei uns sind Alle willkommen! 
+      Unser Ziel ist ein eigener Treffpunkt und Skatepark in Butzbach. Hast du Bock drauf?
+    </p>
   </div>
 </section>
 <section class="slider">
@@ -86,10 +90,10 @@
 <section class="mitglied">
   <div style="padding: 0 10px;">
     <div class="headline">
-      <h2>Mitglied werden</h2>
+      <h2>Kontakt</h2>
     </div>
     <div class="content">
-      <p>Hast du Lust mit zumachen? Du kannst einfach das Formular ausfüllen, dann senden wir dir einen Mitgliedsantrag per Post zu.</p>
+      <p>Hast du Lust bei uns mitzumachen oder du möchtest uns einfach etwas Fragen? Schreib uns auf Instagram eine Nachricht, dort sind wir am besten erreichbar!</p>
 
       <p>Die wichtigsten Fakten zu einer Vereinsmitgliedschaft bei uns:</p>
       <ul>
@@ -141,15 +145,6 @@
       <input type="submit" id="submit" name="submit" value="funcking send ittt 🤙🏻🤙🏻"><br>
     </div>
   </form>
-</section>
-
-<section class="collumns">
-  <div class="headline">
-    <h2>Kontakt</h2>
-  </div>
-  <div class="content">
-    <p>Schreibe uns einfach eine Nachricht auf Instagram oder melde dich einfach per E-Mail</p>
-  </div>
 </section>
 
 <footer>
