--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <link rel="stylesheet" href="ext/swiper.css">
   <link rel="stylesheet" href="style.css">
+  <title>Rollsportkultur Butzbach e.V. | Wir pushen Butzbach</title>
+  
 
 
 </head>
@@ -23,7 +25,7 @@
     <p>
       Wir möchten den Rollsport in Butzbach voranbringen. 
       Egal ob Skateboarding, BMX, Inline-Skates oder Rollschuh, bei uns sind Alle willkommen! 
-      Unser Ziel ist ein eigener Treffpunkt und Skatepark in Butzbach. Hast du Bock drauf?
+      Unser Ziel ist ein eigener Treffpunkt und Skatepark in Butzbach.
     </p>
   </div>
 </section>
@@ -88,7 +90,7 @@
 </section>
 
 <section class="mitglied">
-  <div style="padding: 0 10px;">
+  <div style="padding:40px;">
     <div class="headline">
       <h2>Kontakt</h2>
     </div>
